--- a/package.json
+++ b/package.json
@@ -4,10 +4,8 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "dev": "next dev --turbo",
+    "build": "next build"
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.1.0",
@@ -16,9 +14,9 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.12",
-    "i18next": "^23.11.5",
-    "i18next-browser-languagedetector": "^8.0.0",
     "lucide-react": "^0.400.0",
+    "next": "^14.2.4",
+    "next-intl": "^3.15.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "tailwind-merge": "^2.3.0",
@@ -37,7 +35,6 @@
     "eslint-plugin-react-refresh": "^0.4.7",
     "postcss": "^8.4.39",
     "tailwindcss": "^3.4.4",
-    "typescript": "^5.2.2",
-    "vite": "^5.3.1"
+    "typescript": "^5.2.2"
   }
 }
